feat(plugin, docs): configure Test tasks with Spark runtime and module options
- Enhanced `SparkPlatformPlugin` to apply Spark runtime classpath and module options to Gradle `Test` tasks during official builds.
- Updated `SparkPlatformPluginFunctionalTest` to validate `Test` task behavior, including JVM arguments and classpath.
- Revised documentation to clarify the use of Spark runtime for JVM test tasks in CI and official builds.